assets/css/style.css
body {
    font-family: Indie Flower, sans-serif, arial;
    box-sizing: border-box;
    background-image: url("../images/cover-image.jpg");
    background-size: cover;
    background-repeat: no-repeat;
}

#outer-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
}

#box {
    background-color: whitesmoke;
    width: 580px;
    border-radius: 25px;
    text-align: center;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
}

#welcome-text {
    font-size: 22px;
    padding: 10px;
    margin: 0;
}

h1 {
    margin: 25px;
}

.btn {
    color: black;
    font-size: 25px;
    padding: 10px 0 10px 0;
    margin: 10px;
    background-color: silver;
    border-radius: 15px;
    border: none;
}

.btn:hover {
    background-color: black;
    color: silver;
}

a {
    font-family: helvetica;
    color: black;
    text-decoration: none;
}

/*quiz page*/
.quiz-box-size {
    height: 405px;
    width: 580px;
} 

#definition {
    font-size: 25px;
    padding: 25px;
    height: 90px;
}

#btn-grid {
    display: grid;
    grid-template-columns: repeat(2, auto);
    gap: 10px;
}

.answer-btn {
    width: 265px;
}

button:disabled {
    color: black;
    pointer-events: none;
}

.correct {
    color:black !important;
    background-color: rgba(0, 128, 0, 0.5) !important;
}

.incorrect {
    color:black !important;
    background-color: rgba(255, 0, 0, 0.5) !important;
}

#score-area {
    margin: 5px auto;
    font-size: 1.2rem;
}

.scores {
    display: inline-block;
    padding: 5px;
    margin: 0;
}

#correct-score {
    color: green;
    font-weight: bold;
}

#incorrect-score {
    color: red;
    font-weight: bold;
}

.score-span {
    margin-left: 10px;
}

#score-comment {
    font-size: 22px;
}

#next-btn {
    display: none;
}

#play-again-btn {
    display: none;
}

/* media queries */

@media screen and (min-width: 376px) and (max-width: 600px) {
    #box {
        width: 334px;
    }
    
    .quiz-box-size {
        height: 380px;
        width: 334px;
    }

    .answer-btn {
        width: 142px;
    }

    #definition {
        font-size: 20px;
        margin: 0;
        height: 90px;
    }

    .btn {
        font-size: 17px;
    }
}

@media screen and (max-width: 375px) {
    #box {
        margin: 0;
        width: 286px;
    }

    .quiz-box-size {
        height: 355px;
        width: 286px;
    }

    #welcome-text {
        font-size: 18px;
    }

    .answer-btn {
        width: 118px;
    }

    h1 {
        font-size: 1.5em;
        margin: 20px;
    }

    #definition {
        font-size: 18px;
        margin: 0;
        height: 70px;
    }

    .btn {
        font-size: 16px;
    }

    #score-area {
        width: 100%;
    }
}

